refactor client RequestStatus construction
